# ai-tour-lausanne-2025

./: azure.yaml  notes.md
infra/: README.md  deployments.yaml  main.bicep  main.parameters.json
infra/modules/ai/: account.bicep  project.bicep
src/app/: app.py  load_agents.py  magentic_agents.py  multi_agents.py  pyproject.toml  single_agent.py
src/app/agents/: airagorn.yaml  all_knowing.yaml  boromai.yaml  frodai.yaml  gandaif.yaml  gimlai.yaml  legolai.yaml  merrai.yaml  pipai.yaml  quest_planner.yaml  samai.yaml
